--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -10,6 +10,6 @@
 <body>
     <input id = "id" type="text" placeholder="아이디"><br>
     <input id = "psword" type="text" placeholder="비밀번호"><br> 
-    <button>로그인<button>
+    <button>로그인</button>
 </body>
 </html>
